<resources>
    <string name="app_name">Cooperator</string>
    <string name="action_settings">Settings</string>
    <string name="newperson_hint">Who?</string>
    <string name="newperson_hint1">First Name</string>
    <string name="newperson_hint2">Last Name?</string>
    <string name="newperson_button">Add Person</string>
    <string name="newemployer_button">Add Employer</string>
    <string name="newevent_date_label">Date?</string>
    <string name="personspinner_label">Person?</string>
    <string name="eventspinner_label">Event?</string>
    <string name="starttime_label">Start time?</string>
    <string name="newevent_date_first">01-07-2019</string>
    <string name="starttime_first">10:00</string>
    <string name="newevent_button">Add Event</string>
    <string name="newevent_hint">Coop name?</string>
    <string name="endtime_label">End time?</string>
    <string name="endtime_first">11:00</string>
    <string name="register_button">Register</string>
    <string name="refresh_button">Refresh Lists</string>
    <string name="title_activity_view_students">ViewStudentsActivity</string>
    <string name="title_activity_view_employers">ViewEmployersActivity</string>
    <string name="title_activity_view_reminders">ViewRemindersActivity</string>
    <string name="title_activity_view_stats">ViewStatsActivity</string>
    <string name="title_activity_view_coops">ViewCoopsActivity</string>
    <string name="title_activity_view_forms">ViewFormsActivity</string>
</resources>
