<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="580dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/colorAccent"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/personspinner_label" />

                    <Spinner
                        android:id="@+id/personspinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/eventspinner_label" />

                    <Spinner
                        android:id="@+id/eventspinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_margin="0dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="register"
                    android:text="@string/register_button" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="refreshLists"
                    android:text="@string/refresh_button" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#16552e" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/newperson_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/newperson_hint1" />

            <EditText
                android:id="@+id/newperson_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/newperson_hint2" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:onClick="addPerson"
                android:text="@string/newperson_button" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#16552e" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/newevent_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/newevent_hint" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/newevent_date_label" />

                <TextView
                    android:id="@+id/newevent_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:onClick="showDatePickerDialog"
                    android:text="@string/newevent_date_first" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/starttime_label" />

                <TextView
                    android:id="@+id/starttime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:onClick="showTimePickerDialog"
                    android:text="@string/starttime_first" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/endtime_label" />

                <TextView
                    android:id="@+id/endtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:onClick="showTimePickerDialog"
                    android:text="@string/endtime_first" />
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:onClick="addEvent"
                android:text="@string/newevent_button" />

            <Button
                android:id="@+id/view_students_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="viewStudents"
                android:text="Students" />
        </LinearLayout>

        <Button
            android:id="@+id/remindersButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="viewReminders"
            android:text="Reminders" />

        <Button
            android:id="@+id/view_employers_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="viewEmployers"
            android:text="Employers" />

        <Button
            android:id="@+id/stats_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="viewStats"
            android:text="Stats" />
    </LinearLayout>

</RelativeLayout>